Fix margin values in _nav.scss for better alignment

--- a/web/themes/custom/abrsd/scss/partials/_nav.scss
+++ b/web/themes/custom/abrsd/scss/partials/_nav.scss
@@ -82,7 +82,7 @@ a.nav-link--::before {
 
   @include media-breakpoint-down(lg) {
     .navbar-brand img {
-      margin-top: -0.5rem
+      margin-top: -0.5rem;
     }
   }
   @include media-breakpoint-down(md) {
@@ -99,7 +99,7 @@ a.nav-link--::before {
 
     @include media-breakpoint-down(lg) {
       .navbar-brand img {
-        margin-top: 0.8rem
+        margin-top: 0.8rem;
       }
     }
     @include media-breakpoint-down(md) {
@@ -235,7 +235,7 @@ a.nav-link--::before {
   margin-top: -0.7rem;
 
   .nav-item {
-    margin-left: -3.4rem;
+    margin-left: -2rem;
   }
 
   .nav-link {
@@ -247,6 +247,12 @@ a.nav-link--::before {
 
   .nav-link--user-login::before {
     background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16"%3E%3Cpath d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/%3E%3C/svg%3E') !important;
+    position: relative;
+    top: 3px;
+  }
+
+  .nav-link--user-register::before {
+    background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22currentColor%22%20class%3D%22bi%20bi-person-plus-fill%22%20viewBox%3D%220%200%2016%2016%22%3E%3Cpath%20d%3D%22M1%2014s-1%200-1-1%201-4%206-4%206%203%206%204-1%201-1%201zm5-6a3%203%200%201%200%200-6%203%203%200%200%200%200%206%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20d%3D%22M13.5%205a.5.5%200%200%201%20.5.5V7h1.5a.5.5%200%200%201%200%201H14v1.5a.5.5%200%200%201-1%200V8h-1.5a.5.5%200%200%201%200-1H13V5.5a.5.5%200%200%201%20.5-.5%22%2F%3E%3C%2Fsvg%3E') !important;
     position: relative;
     top: 3px;
   }
